--- a/Dockerfile.cpu
+++ b/Dockerfile.cpu
@@ -1,4 +1,4 @@
-FROM ubuntu:latest
+FROM ubuntu:18.04
 MAINTAINER Fabiano Menegidio <fabiano.menegidio@biology.bio.br>
 
 ##############################################################################
