--- a/Dockerfile.cpu
+++ b/Dockerfile.cpu
@@ -87,12 +87,7 @@ RUN apt-get update \
 ##############################################################################
 # Install packages through Scif
 ##############################################################################
-    scif install $HOME/.packages/python-pkg.scif \
-    && scif install $HOME/.packages/biopython.scif \
-    && scif install $HOME/.packages/git-annex.scif \
-    && scif install $HOME/.packages/git-lfs.scif \
-    && scif install $HOME/.packages/dvc.scif \
-    && scif install $HOME/.packages/jupyter.scif
+    scif install $HOME/.packages/python-pkg.scif
     
 EXPOSE 6000
 EXPOSE 8888
