--- a/Dockerfile.cpu
+++ b/Dockerfile.cpu
@@ -25,6 +25,7 @@ ADD .config/bashrc/.bash_profile $HOME/.bash_profile
 ##############################################################################
 ADD packages/jupyter.scif /root/.packages/
 ADD packages/python-pkg.scif /root/.packages/
+ADD packages/pythonML-pkg.scif /root/.packages/
 ADD packages/biopython.scif /root/.packages/
 ADD packages/git-annex.scif /root/.packages/
 ADD packages/git-lfs.scif /root/.packages/
