--- a/Dockerfile.cpu
+++ b/Dockerfile.cpu
@@ -89,8 +89,8 @@ RUN apt-get update \
 # Install packages through Scif
 ##############################################################################
     scif install $HOME/.packages/python-pkg.scif \
-    scif install $HOME/.packages/pythonML-pkg.scif \
-    scif install $HOME/.packages/biopython.scif
+    && scif install $HOME/.packages/pythonML-pkg.scif \
+    && scif install $HOME/.packages/biopython.scif
     
 EXPOSE 6000
 EXPOSE 8888
