--- a/Dockerfile.cpu
+++ b/Dockerfile.cpu
@@ -90,7 +90,11 @@ RUN apt-get update \
 ##############################################################################
     scif install $HOME/.packages/python-pkg.scif \
     && scif install $HOME/.packages/pythonML-pkg.scif \
-    && scif install $HOME/.packages/biopython.scif
+    && scif install $HOME/.packages/biopython.scif \
+    && scif install $HOME/.packages/jupyter.scif \
+    && scif install $HOME/.packages/git-annex.scif \
+    && scif install $HOME/.packages/git-lfs.scif \
+    && scif install $HOME/.packages/dvc.scif
     
 EXPOSE 6000
 EXPOSE 8888
