--- a/Dockerfile.cpu
+++ b/Dockerfile.cpu
@@ -31,7 +31,8 @@ ADD packages/git-annex.scif /root/.packages/
 ADD packages/git-lfs.scif /root/.packages/
 ADD packages/dvc.scif /root/.packages/
 ADD packages/mlflow.scif /root/.packages/
-
+ADD packages/pydata.scif /root/.packages/
+ADD packages/dask.scif /root/.packages/
 
 ##############################################################################
 # ENVs
@@ -96,7 +97,9 @@ RUN apt-get update \
     && scif install $HOME/.packages/git-annex.scif \
     && scif install $HOME/.packages/git-lfs.scif \
     && scif install $HOME/.packages/dvc.scif \
-    && scif install $HOME/.packages/mlflow.scif
+    && scif install $HOME/.packages/mlflow.scif \
+    && scif install $HOME/.packages/pydata.scif \
+    && scif install $HOME/.packages/dask.scif \
     
 EXPOSE 6000
 EXPOSE 8888
