--- a/Dockerfile.cpu
+++ b/Dockerfile.cpu
@@ -97,9 +97,10 @@ RUN apt-get update \
     && scif install $HOME/.packages/git-annex.scif \
     && scif install $HOME/.packages/git-lfs.scif \
     && scif install $HOME/.packages/dvc.scif \
+    && scif install $HOME/beautifulsoup.scif \
     && scif install $HOME/.packages/mlflow.scif \
-    && scif install $HOME/.packages/pydata.scif \
-    && scif install $HOME/.packages/dask.scif \
+    && scif install $HOME/.packages/dask.scif
+   
     
 EXPOSE 6000
 EXPOSE 8888
