--- a/Dockerfile.cpu
+++ b/Dockerfile.cpu
@@ -34,6 +34,7 @@ ADD packages/mlflow.scif /root/.packages/
 ADD packages/pydata.scif /root/.packages/
 ADD packages/dask.scif /root/.packages/
 ADD packages/beautifulsoup.scif /root/.packages/
+ADD packages/graphviz.scif /root/.packages/
 
 ##############################################################################
 # ENVs
@@ -101,7 +102,8 @@ RUN apt-get update \
     && scif install $HOME/.packages/beautifulsoup.scif \
     && scif install $HOME/.packages/mlflow.scif \
     && scif install $HOME/.packages/dask.scif \
-    && scif install $HOME/.packages/pydata.scif
+    && scif install $HOME/.packages/pydata.scif \
+    && scif install $HOME/.packages/graphviz.scif
    
     
 EXPOSE 6000
