--- a/Dockerfile.cpu
+++ b/Dockerfile.cpu
@@ -35,6 +35,7 @@ ADD packages/pydata.scif /root/.packages/
 ADD packages/dask.scif /root/.packages/
 ADD packages/beautifulsoup.scif /root/.packages/
 ADD packages/graphviz.scif /root/.packages/
+ADD packages/mlv-tools.scif /root/.packages/
 
 ##############################################################################
 # ENVs
@@ -103,8 +104,8 @@ RUN apt-get update \
     && scif install $HOME/.packages/mlflow.scif \
     && scif install $HOME/.packages/dask.scif \
     && scif install $HOME/.packages/pydata.scif \
-    && scif install $HOME/.packages/graphviz.scif
-   
+    && scif install $HOME/.packages/graphviz.scif \
+    && scif install $HOME/.packages/mlv-tools.scif
     
 EXPOSE 6000
 EXPOSE 8888
