--- a/Dockerfile.cpu
+++ b/Dockerfile.cpu
@@ -36,6 +36,7 @@ ADD packages/dask.scif /root/.packages/
 ADD packages/beautifulsoup.scif /root/.packages/
 ADD packages/graphviz.scif /root/.packages/
 ADD packages/mlv-tools.scif /root/.packages/
+ADD packages/statsmodels.scif /root/.packages/
 
 ##############################################################################
 # ENVs
@@ -105,7 +106,8 @@ RUN apt-get update \
     && scif install $HOME/.packages/dask.scif \
     && scif install $HOME/.packages/pydata.scif \
     && scif install $HOME/.packages/graphviz.scif \
-    && scif install $HOME/.packages/mlv-tools.scif
+    && scif install $HOME/.packages/mlv-tools.scif \
+    && scif install $HOME/.packages/statsmodels.scif
     
 EXPOSE 6000
 EXPOSE 8888
