--- a/Dockerfile.cpu
+++ b/Dockerfile.cpu
@@ -37,6 +37,8 @@ ADD packages/beautifulsoup.scif /root/.packages/
 ADD packages/graphviz.scif /root/.packages/
 ADD packages/mlv-tools.scif /root/.packages/
 ADD packages/statsmodels.scif /root/.packages/
+ADD packages/seaborn.scif /root/.packages/
+
 
 ##############################################################################
 # ENVs
@@ -107,7 +109,8 @@ RUN apt-get update \
     && scif install $HOME/.packages/pydata.scif \
     && scif install $HOME/.packages/graphviz.scif \
     && scif install $HOME/.packages/mlv-tools.scif \
-    && scif install $HOME/.packages/statsmodels.scif
+    && scif install $HOME/.packages/statsmodels.scif \
+    && scif install $HOME/.packages/seaborn.scif
     
 EXPOSE 6000
 EXPOSE 8888
