--- a/Dockerfile.cpu
+++ b/Dockerfile.cpu
@@ -38,6 +38,7 @@ ADD packages/graphviz.scif /root/.packages/
 ADD packages/mlv-tools.scif /root/.packages/
 ADD packages/statsmodels.scif /root/.packages/
 ADD packages/seaborn.scif /root/.packages/
+ADD packages/sklearn.scif /root/.packages/
 
 
 ##############################################################################
@@ -110,7 +111,8 @@ RUN apt-get update \
     && scif install $HOME/.packages/graphviz.scif \
     && scif install $HOME/.packages/mlv-tools.scif \
     && scif install $HOME/.packages/statsmodels.scif \
-    && scif install $HOME/.packages/seaborn.scif
+    && scif install $HOME/.packages/seaborn.scif \
+    && scif install $HOME/.packages/sklearn.scif
     
 EXPOSE 6000
 EXPOSE 8888
