--- a/Dockerfile.cpu
+++ b/Dockerfile.cpu
@@ -114,7 +114,7 @@ RUN apt-get update \
     && scif install $HOME/.packages/statsmodels.scif \
     && scif install $HOME/.packages/seaborn.scif \
     && scif install $HOME/.packages/sklearn.scif \
-    && scif install $HOME/.packages/scikit.scif \
+    && scif install $HOME/.packages/scikit.scif
     
 EXPOSE 6000
 EXPOSE 8888
