--- a/Dockerfile.cpu
+++ b/Dockerfile.cpu
@@ -40,6 +40,7 @@ ADD packages/statsmodels.scif /root/.packages/
 ADD packages/seaborn.scif /root/.packages/
 ADD packages/sklearn.scif /root/.packages/
 ADD packages/scikit.scif /root/.packages/
+ADD packages/tensorflow.scif /root/.packages/
 
 
 ##############################################################################
@@ -114,7 +115,8 @@ RUN apt-get update \
     && scif install $HOME/.packages/statsmodels.scif \
     && scif install $HOME/.packages/seaborn.scif \
     && scif install $HOME/.packages/sklearn.scif \
-    && scif install $HOME/.packages/scikit.scif
+    && scif install $HOME/.packages/scikit.scif \
+    && scif install $HOME/.packages/tensorflow.scif
     
 EXPOSE 6000
 EXPOSE 8888
